# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/testing/testing.gni")
import("../tools/impeller.gni")

test_fixtures("stator_dart_fixtures") {
  dart_main = "stator_main.dart"
}

impeller_component("stator_unittests") {
  testonly = true

  target_type = "executable"

  sources = [ "stator_unittests.cc" ]

  deps = [
    ":stator_dart_fixtures",
    "../playground:playground_test",
    "//flutter/testing",
  ]
}

group("stator") {
  testonly = true

  deps = [ ":stator_unittests" ]
}
