# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../tools/impeller.gni")
import("../tools/epoxy.gni")

epoxy_parser("parser") {
  name = "epoxy"
  source = "epoxy.y"
  deps = [ "//third_party/json" ]
}

epoxy_lexer("lexer") {
  name = "epoxy"
  source = "epoxy.l"
  deps = [
    ":parser",
    "//third_party/json",
  ]
}

impeller_component("epoxy") {
  target_type = "executable"

  sources = [
    "code_gen.cc",
    "code_gen.h",
    "command_line.cc",
    "command_line.h",
    "driver.cc",
    "driver.h",
    "epoxy_main.cc",
    "file.cc",
    "file.h",
    "macros.h",
    "scanner.cc",
    "scanner.h",
    "sema.cc",
    "sema.h",
    "types.cc",
    "types.h",
    "version.h",
  ]

  deps = [
    ":lexer",
    ":parser",
    "//flutter/fml",
    "//third_party/inja",
    "//third_party/json",
  ]
}
