# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../tools/impeller.gni")
import("../tools/grammar.gni")

gen_parser("parser") {
  name = "epoxy"
  source = "epoxy.y"
  deps = [ "//third_party/json" ]
}

gen_lexer("lexer") {
  name = "epoxy"
  source = "epoxy.l"
  deps = [
    ":parser",
    "//third_party/json",
  ]
}

impeller_component("epoxy_lib") {
  sources = [
    "code_gen.cc",
    "code_gen.h",
    "command_line.cc",
    "command_line.h",
    "driver.cc",
    "driver.h",
    "file.cc",
    "file.h",
    "scanner.cc",
    "scanner.h",
    "sema.cc",
    "sema.h",
    "types.cc",
    "types.h",
    "version.h",
  ]

  public_deps = [
    ":lexer",
    ":parser",
    "//flutter/fml",
    "//third_party/inja",
    "//third_party/json",
  ]
}

impeller_component("epoxy") {
  target_type = "executable"

  sources = [ "epoxy_main.cc" ]

  deps = [ ":epoxy_lib" ]
}

impeller_component("epoxy_unittests") {
  testonly = true

  sources = [
    "code_gen_unittests.cc",
    "driver_unittests.cc",
    "file_unittests.cc",
    "sema_unittests.cc",
  ]

  deps = [
    ":epoxy_lib",
    "//flutter/testing",
  ]
}
