# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../tools/impeller.gni")
import("../tools/epoxy.gni")

epoxy_cxx("renderer_epoxy") {
  source = "renderer.epoxy"
}

impeller_component("renderer") {
  sources = [
    "compositor.cc",
    "compositor.h",
    "context.cc",
    "context.h",
    "swapchain.cc",
    "swapchain.h",
  ]
  deps = [
    ":renderer_epoxy",
    "../../entity",
    "../../renderer",
    "../../typographer/backends/skia:typographer_skia_backend",
  ]
}
