# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../tools/impeller.gni")
import("../tools/epoxy.gni")

epoxy_cxx("renderer_epoxy") {
  source = "renderer.epoxy"
}

epoxy_dart("renderer_epoxy_dart") {
  source = "renderer.epoxy"
}

impeller_component("renderer") {
  sources = [
    "compositor.cc",
    "compositor.h",
    "context.cc",
    "context.h",
    "renderer.cc",
    "renderer.h",
    "swapchain.cc",
    "swapchain.h",
  ]
  deps = [
    ":renderer_epoxy",
    ":renderer_epoxy_dart",
    "../../entity",
    "../../renderer",
    "../../typographer/backends/skia:typographer_skia_backend",
    "../objffi",
  ]
}
