# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/testing/testing.gni")
import("../../tools/impeller.gni")

test_fixtures("dart_fixtures") {
  dart_main = "stator_main.dart"
  fixtures = [
    "fixtures/epoxy/error1_1.epoxy",
    "fixtures/epoxy/error3_1.epoxy",
    "fixtures/epoxy/error3_3.epoxy",
    "fixtures/epoxy/error51_12.epoxy",
    "fixtures/epoxy/error84_24.epoxy",
    "fixtures/epoxy/error_pretty.epoxy",
    "fixtures/epoxy/hello.txt",
  ]
}

impeller_component("stator_unittests") {
  testonly = true

  target_type = "executable"

  sources = [
    "stator_test.cc",
    "stator_test.h",
    "stator_unittests.cc",
  ]

  deps = [
    ":dart_fixtures",
    "../../playground:playground_test",
    "../epoxy:epoxy_unittests",
    "../renderer",
    "//flutter/testing",
    "//flutter/testing:dart",
    "//flutter/testing:fixture_test",
  ]
}
